# Logger

./: CMakeLists.txt
Loggerlib/: CMakeLists.txt
Loggerlib/include/: logger.h
Loggerlib/src/: logger.cpp
appbuild/: logapp
src/: app.cpp
